Expanded tests and rewrote comments in service